k8s/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 9001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: egress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                #log_format: format: "%[START_TIME]ms %req[id]%RESP[%STATUS]% [PROTOCOL]% %[REQUEST_SCHEME]% %[REQUEST_METHOD]% %[REQUEST_URL]% %[UPSTREAM_STATUS]% %[RESP_CONTENT_LENGTH]% %[RESP_DURATION_MS]% %[TERMINAL_PROTOCOL]% %[USER_AGENT]%\n"
          # - name: envoy.access_loggers.stderr
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/hello"
                route:
                  cluster: dynamic_forward_proxy_cluster
                  host_rewrite_header: X-Fwd-HostWithPort
                  retry_policy:
                    retry_on: 5xx
                    num_retries: 1
                    #per_try_timeout: 5s
                    # retry_back_off:
                    #   base_interval: 1s
                    #   #max_interval: 10s
              - match:
                  prefix: "/bye"
                route:
                  cluster: dynamic_forward_proxy_cluster
                  host_rewrite_header: X-Fwd-HostWithPort
                  retry_policy:
                    retry_on: 5xx
                    num_retries: 1
              include_request_attempt_count: true
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              # retry_policy:
              #   retry_on: 5xx
              #   num_retries: 0
  clusters:
  - name: dynamic_forward_proxy_cluster
    #connect_timeout: 10s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY
