k8s/frontservice-dotnet-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontservice-dotnet
  name: frontservice-dotnet-proxy
spec:
  ports:
  - name: frontservice-proxy
    port: 9901
    protocol: TCP
    targetPort: 9901
  selector:
    app: frontservice-dotnet
  type: ClusterIP
status:
  loadBalancer: {}
