k8s/frontservice-dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontservice-dotnet
  name: frontservice-dotnet
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: frontservice-dotnet
  type: LoadBalancer
status:
  loadBalancer: {}
